--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
 		<div id="contactbox">
 			<ul>
 				<li><a href="https://www.instagram.com/jigsawofficial_/">instagram</li></a>
+				<li><a href="https://www.tiktok.com/@jigsawofficial_/">tiktok</li></a>
 				<li><a href="https://www.youtube.com/@jigsawofficialunderscore">youtube</li></a>
 			</ul>
 		</div>
