--- a/gigs.html
+++ b/gigs.html
@@ -20,18 +20,18 @@
 	</nav>
 	<h1 class="title">upcoming shows</h1>
 	<div id="gigtitle">
-	<li>the lantern aug 30</li>
-	<li id="gig2">the lantern sep 13</li>
+	<li>the lantern sep 13</li>
+	<li id="gig2">curveball sep 17</li>
 	</div>
 	<div id="posters">
 	<li>
-		<a href="https://www.eventbrite.com/e/kb-promotions-present-susie-and-the-switchblades-blandad-jigsaw-tickets-1544971203459?aff=oddtdtcreator">
-		<img id="gigposter" src="aug 30.jpg">
+		<a href="https://www.eventbrite.com/e/jigsaw-wagyu-release-show-at-curveball-tickets-1641646762659?aff=oddtdtcreator">
+		<img id="gigposter" src="photo2.png">
 		</a>
 	</li>
 	<li>
 		<a href="https://www.eventbrite.com/e/echo-gate-single-release-party-w-snafu-jigsaw-tickets-1533891052429?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=ebdsshcopyurl">
-		<img id="gigposter2" src="sep 13.png">
+		<img id="gigposter2" src="photo1.png">
 		</a>
 	</li>
 	</div>
