--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="sigjaw.css">
 	<title>JIGSAW</title>
-	<link rel="icon" type="image/png" href=" JIGSAW LOGO.png">
+	<link rel="icon" type="image/png" href=" JIGSAW ICON.png">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Nata+Sans:wght@100..900&display=swap" rel="stylesheet">
@@ -19,6 +19,13 @@
 		</ul>
 	</nav>
 		<img id="logo"src="JIGSAW LOGO.png" draggable="false">
-		<img id="photo1"src="photo1.jpg" draggable="false">
+
+		<p><a href="https://www.eventbrite.com/e/jigsaw-wagyu-release-show-at-curveball-tickets-1641646762659?aff=oddtdtcreator">  
+		<img id="photo1"src="photo1.png" draggable="false"></a>
+		</p>
+
+		<div id="tickets">
+		<p> <a href="https://www.eventbrite.com/e/jigsaw-wagyu-release-show-at-curveball-tickets-1641646762659?aff=oddtdtcreator"> click here for tickets </a> </p> 
+		</div>
 </body>
 </html>
