--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 		</p>
 
 		<div id="tickets">
-		<p> <a href="https://www.eventbrite.com/e/jigsaw-wagyu-release-show-at-curveball-tickets-1641646762659?aff=oddtdtcreator"> click here for tickets </a> </p> 
+		<p> <a href="https://www.eventbrite.com/e/jigsaw-wagyu-release-show-at-curveball-tickets-1641646762659?aff=oddtdtcreator" style="text-decoration:none;" >tickets here </a> 
+		</p> 
 		</div>
 </body>
 </html>
